welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int=0
nbPas=nbPas+1
while(!estSurBiscuit) {avance();}
prendreBiscuit();porterBiscuit();
var dejaFait:Int=0